update to covid19-rest dockerfiles

--- a/covid19-rest/covid19-rest-nginx.conf
+++ b/covid19-rest/covid19-rest-nginx.conf
@@ -1,5 +1,5 @@
-upstream covid19-Rest {
-    server covid19-Rest-django:8000;
+upstream covid19-rest {
+    server covid19-rest-django:8000;
 }
 
 server {
@@ -7,18 +7,24 @@ server {
     listen 80;
     server_name localhost;
 
+    root /app/;
+
+    #access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
     location /static/ {
-        alias /mnt/covid19-Rest/static/;
+        alias /app/static/;
     }
 
     location / {
-        proxy_pass http://covid19-Rest;
+        proxy_pass http://covid19-rest;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
         if (!-f $request_filename) {
-            proxy_pass http://covid19-Rest;
+            proxy_pass http://covid19-rest;
             break;
         }
     }
 }
+
