--- a/covid19-rest/docker-compose.yml
+++ b/covid19-rest/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '2'
 
 services:
 
@@ -6,10 +6,11 @@ services:
   covid19-rest-nginx:
     image: nginx
     ports:
-      - 8000:80
+      - 80:80
     volumes:
-      - ./covid19-rest-nginx.conf:/etc/nginx/conf.d/local.conf
-      - static:/mnt/covid19-rest/static/
+      - ./covid19-rest-nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - /mnt/covid19-rest/:/app/
+        # - static:/mnt/covid19-rest/static/
     depends_on:
       - covid19-rest-django
 
@@ -24,24 +25,10 @@ services:
         #- covid19-rest-postgres
     volumes:
       - /mnt/covid19-rest/:/app/
-      - static:/mnt/covid19-rest/static/
+        # - static:/mnt/covid19-rest/static/
     ports:
-      - 8080:8000
+      - 8000:8000
 
-
-  covid19-rest-celery-worker:
-    build:
-      context: .
-      dockerfile: Dockerfile.django
-      args:
-        branch: master
-    depends_on:
-      - covid19-rest-rabbitmq
-      - covid19-rest-postfix
-      - covid19-rest-redis
-    volumes:
-      - /mnt/covid19-rest/:/app/
-    entrypoint: ['celery','worker','--app=claro_rollout','--loglevel=INFO','--logfile=/tmp/celery.log','--pidfile=/tmp/celery.pid','-Ofair']
 
   covid19-rest-celery-worker:
     build:
@@ -53,7 +40,8 @@ services:
       - covid19-rest-rabbitmq
     volumes:
       - /mnt/covid19-rest/:/app/
-    entrypoint: ['celery','worker','--app=claro_rollout','--loglevel=INFO','--logfile=/tmp/dataimporter.log','--queues=DataImporter','--pidfile=/tmp/celery.pid','-Ofair']
+    entrypoint: ['celery','worker','--app=covid_19','--loglevel=INFO','--logfile=/tmp/celery.log','--pidfile=/tmp/celery.pid','-Ofair']
+
 
   covid19-rest-celery-beat:
     build:
@@ -65,7 +53,7 @@ services:
       - covid19-rest-rabbitmq
     volumes:
       - /mnt/covid19-rest/:/app/
-    entrypoint: ['celery', 'beat', '--app=claro_rollout', '--schedule=/tmp/celery-beat.scheduler', '--loglevel=INFO', '--logfile=/dev/stdout', '--pidfile=/tmp/celery-beat.pid']
+    entrypoint: ['celery', 'beat', '--app=covid_19', '--schedule=/tmp/celery-beat.scheduler', '--loglevel=INFO', '--logfile=/dev/stdout', '--pidfile=/tmp/celery-beat.pid']
 
   covid19-rest-postgres:
     image: postgres:latest
