dockerfiles app-back, workflows, env, keys & conf

--- a/covid19-rest/docker-compose.yml
+++ b/covid19-rest/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./covid19-rest-nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./app-back-nginx.conf:/etc/nginx/conf.d/default.conf:ro
       - /mnt/covid19-rest/:/app/
         # - static:/mnt/covid19-rest/static/
     depends_on:
